fixed diagonal left div slightly to align with other divs

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -35,7 +35,7 @@
   height: 600px;
   width: 300px;
   bottom: -280px;
-  left: 877px;
+  left: 868px;
   background-color: rgb(255, 255, 255);
   position: absolute;
   transform: rotate(-60deg);
